# auctionAlgorithms

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Jenkinsfile  README.md
auction/: CMakeLists.txt
auction/incl/: Assignment.h  Auction.h  AuctionData.h  Object.h  Person.h  auction.h  auctionData.h
auction/src/: Assignment.cpp  Auction.cpp  AuctionData.cpp  CMakeLists.txt  Object.cpp  Person.cpp  auction.cpp  auctionData.cpp  main.cpp
test/: CMakeLists.txt  testAuction.cpp
